swr: set the default used_ch_count value to zero.

This allows an appropriate behaviour when it is not specified (fallback
to the number of input channels).

Fixes Ticket523